# Robotic-Studio-1

./: README.md  sprint4fire.cpp
MarcinsPackage/cylinder_detector_spawner/: CMakelists.txt  package.xml
MarcinsPackage/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
MarcinsPackage/ros2_ws/install/SimpleLocalizer/share/SimpleLocalizer/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
MarcinsPackage/ros2_ws/install/Sprint3/lib/Sprint3/: map_overlay
MarcinsPackage/ros2_ws/install/Sprint3/share/Sprint3/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
MarcinsPackage/ros2_ws/install/aws_robomaker_bookstore_world/share/aws_robomaker_bookstore_world/: package.bash  package.zsh
MarcinsPackage/ros2_ws/install/aws_robomaker_small_house_world/share/aws_robomaker_small_house_world/: package.bash  package.zsh
MarcinsPackage/ros2_ws/install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
MarcinsPackage/ros2_ws/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
MarcinsPackage/ros2_ws/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
MarcinsPackage/ros2_ws/install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
MarcinsPackage/ros2_ws/install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
MarcinsPackage/ros2_ws/install/localization_error_calculator/share/localization_error_calculator/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
MarcinsPackage/ros2_ws/install/robotics_studio_1/lib/robotics_studio_1/: sprint1  sprint3
MarcinsPackage/ros2_ws/install/robotics_studio_1/share/robotics_studio_1/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
MarcinsPackage/ros2_ws/install/scan_sub_pub/lib/scan_sub_pub/: scan_sub_pub_node
MarcinsPackage/ros2_ws/install/scan_sub_pub/share/scan_sub_pub/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
MarcinsPackage/ros2_ws/install/turtlebot3/share/turtlebot3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  (+2 more)
MarcinsPackage/ros2_ws/log/: latest_build  latest_list
MarcinsPackage/ros2_ws/src/SimpleLocalizer/: CMakeLists.txt
MarcinsPackage/ros2_ws/src/SimpleLocalizer/src/: simplelocalizer.cpp
MarcinsPackage/ros2_ws/src/Sprint3/: CMakeLists.txt  package.xml
MarcinsPackage/ros2_ws/src/Sprint3/src/: cylinder_detector.cpp  map_overlay.cpp
MarcinsPackage/ros2_ws/src/localization_error_calculator/: CMakeLists.txt
MarcinsPackage/ros2_ws/src/localization_error_calculator/src/: errorcalc.cpp
MarcinsPackage/ros2_ws/src/package/: Doxyfile
MarcinsPackage/ros2_ws/src/package/html/: classCylinderDetectionNode-members.html  classCylinderDetectionNode.html  classCylinderDetectionNode__inherit__graph.md5  classMapOverlay.html  classMapOverlay__coll__graph.md5  classMapProcessorNode__coll__graph.map  classMapProcessorNode__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  pages.html  sprint3_8cpp.html  sprint3_8cpp__incl.map  sprint3_8cpp__incl.md5  sprint3part2_8cpp.html
MarcinsPackage/ros2_ws/src/package/latex/: classCylinderDetectionNode__inherit__graph.md5  classMapProcessorNode__coll__graph.md5  classScanToImageNode.tex  classScanToImageNode__inherit__graph.md5  hierarchy.tex  sprint3part2_8cpp.tex  sprint3part2_8cpp__incl.md5
MarcinsPackage/ros2_ws/src/package/src/: sprint2.cpp  sprint3.cpp  sprint3part2.cpp
MarcinsPackage/ros2_ws/src/scan_sub_pub/: CMakeLists.txt
MarcinsPackage/ros2_ws/src/scan_sub_pub/include/: scanSubPub.h
MarcinsPackage/ros2_ws/src/scan_sub_pub/src/: scanSubPub.cpp
NathansPackage/html/: annotated.html  classCylinderDetectionNode__inherit__graph.map  classMapOverlay-members.html  classMapOverlay__coll__graph.map  classMapProcessorNode-members.html  classMapProcessorNode.html  classScanToImageNode-members.html  classScanToImageNode.html  classScanToImageNode__inherit__graph.map  classScanToImageNode__inherit__graph.md5  classes.html  globals.html  inherit_graph_0.map  inherits.html  md_README.html  sprint3part2_8cpp__incl.map  sprint3part2_8cpp__incl.md5
NathansPackage/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_7.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js
NathansPackage/latex/: annotated.tex  classCylinderDetectionNode.tex  classMapOverlay.tex  classMapOverlay__inherit__graph.md5  classMapProcessorNode.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex  sprint3_8cpp.tex  sprint3_8cpp__incl.md5
NathansPackage/src/: sprint3.cpp
OvOPackage/: CMakeLists.txt  ground_truth_map.pgm  notes.md  sprint4.cpp
OvOPackage/src/: sprint4.cpp
src/: sprint3part2.cpp
(+627 files in other folders)
