<?xml version="1.0"?>
<package format="3">
  <name>cylinder_detector_spawner</name>
  <version>0.0.1</version>
  <description>Package to detect and spawn cylinders using LaserScan and Gazebo</description>

  <maintainer email="Marcin.a.Konczyk@student.uts.edu.au">Marcin Konczyk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
