<?xml version="1.0"?>
<package format="2">
  <name>SimpleLocalizer</name>
  <version>0.1.0</version>
  <description>A simple localizer using laser scans, static map and odometry data.</description>
  
  <maintainer email="Marcin.a.Konczyk@student.uts.edu.au">Marcin Konczyk</maintainer>
  <license>Apache 2.0</license>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv</depend>
  <depend>tf2</depend>

  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
